changing a wrong class name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="send">
       <form id="send-container" action="#">
-        <input type="text" name="messageInput" id="messageInput" />
+        <input type="text" name="message" id="messageInput" />
         <button class="btn" type="submit">Send</button>
       </form>
     </div>
